--- a/custom_components/wyzesense/manifest.json
+++ b/custom_components/wyzesense/manifest.json
@@ -4,5 +4,6 @@
     "documentation": "https://github.com/kevinvincent/wyzesense",
     "requirements": ["wyzesense==0.0.4","retry==0.9.2"],
     "dependencies": [],
-    "codeowners": ["@kevinvincent"]
+    "version":"v0.0.9",
+    "codeowners": ["@carolinapunk"]
 }
